log
Thu 20 Apr 2023 10:20:15 PM UTC: 
 tests:  1|8
total_score: 0/70
1d4e872
Thu 20 Apr 2023 10:25:46 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
a382c63
Thu 20 Apr 2023 10:26:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
07f1ba8
Thu 20 Apr 2023 10:29:23 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: too few arguments to function ‘is_equal’
   78 |     if (is_equal(tree->current->pair->key, key)){
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
7d2921c
Thu 20 Apr 2023 10:29:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a715fec
Thu 20 Apr 2023 10:38:28 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ca7e0a5
Fri 21 Apr 2023 10:32:24 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:13: error: unused variable ‘currentAux’ [-Werror=unused-variable]
   51 |   TreeNode *currentAux = tree->root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
87fa1f7
Fri 21 Apr 2023 10:36:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
31531f7
Fri 21 Apr 2023 10:43:24 PM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++---
 1 file changed, 25 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:26: error: ‘kew’ undeclared (first use in this function); did you mean ‘key’?
   61 |     if (tree->lower_than(kew, current->pair->key)){
      |                          ^~~
      |                          key
treemap.c:61:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3969111
Fri 21 Apr 2023 10:43:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
78bdc02
Fri 21 Apr 2023 10:45:05 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
74220c7
Fri 21 Apr 2023 10:50:18 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++----------------
 1 file changed, 23 insertions(+), 16 deletions(-)
 tests:  13|5
total_score: 25/70
9664b94
